--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,21 @@
 @tailwind components;
 @tailwind utilities;
 
+.form-title-frame {
+  @apply w-full h-1/6 flex items-start justify-center;
+}
+.form-title-logo {
+  @apply w-[40px] h-[40px] object-cover;
+}
+.form-title {
+  @apply font-bold text-2xl md:text-4xl text-center;
+}
+
 .form {
   @apply w-11/12 h-4/6 flex flex-col items-center justify-between;
 }
-
 .input-big-frame {
-  @apply w-10/12 h-[70px] flex flex-col items-start justify-between;
+  @apply w-full md:w-10/12 h-[70px] flex flex-col items-start justify-between;
 }
 .input-title {
   @apply font-semibold text-gray-500;
@@ -15,11 +24,15 @@
 .input-small-frame {
   @apply w-full h-[45px] flex items-center border-2 rounded-lg bg-white;
 }
-.input-icon {
+.input-info-icon {
   @apply text-gray-400;
 }
+.input-error-icon {
+  @apply text-red-400 relative right-2;
+}
+
 .input {
-  @apply w-11/12 h-full pl-2 focus:outline-none;
+  @apply w-full md:w-11/12 h-full pl-2 focus:outline-none;
 }
 
 .other-login-methods {
@@ -28,4 +41,20 @@
 
 .login-methods-image {
   @apply w-[30px] h-[30px] object-cover;
+}
+.robot-check-frame {
+  @apply w-full md:w-10/12 h-[20px] flex items-center justify-start border-2;
+}
+.robot-check-input {
+  @apply w-[20px] h-[20px] rounded-lg cursor-pointer;
+}
+.robot-check-info {
+  @apply pl-2 text-gray-500 capitalize text-sm;
+}
+.form-button {
+  @apply w-full md:w-10/12 h-[45px] bg-green_custom rounded-lg font-semibold text-cream_custom hover:bg-red_custom;
+}
+
+.form-page-change-button {
+  @apply w-10/12 h-[20px] text-sm text-gray-500 text-center cursor-pointer relative bottom-4 hover:text-black;
 }
