--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,7 @@
   @apply w-[30px] h-[30px] object-cover;
 }
 .robot-check-frame {
-  @apply w-full sm:w-10/12 h-[25px] sm:h-[20px] flex items-center justify-start border-2;
+  @apply w-full sm:w-10/12 h-[25px] sm:h-[20px] flex items-center justify-start border-2 relative;
 }
 .robot-check-input {
   @apply w-[20px] h-[20px] rounded-lg cursor-pointer;
